--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,4 @@
 .Rhistory
 .RData
 .Ruserdata
-Experiment_12_mem_safe_iterations
-Experiment_14_pounding_tool_priority_iterations
-Experiment_PNAS_iterations
-
-Data/EXP_PNAS_All_OG.csv
-Data/EXP_PNAS_Env_Data_ns_100_nt_2000.csv
-Data/EXP_PNAS_Env_Data_ns_500_nt_2000.csv
-Data/EXP_PNAS_ns_100_nt_2000.csv
-Data/EXP_PNAS_run_data.csv
-Data/EXP_PNAS_sources.csv
-Data/EXP_PNAS_tools.csv
-Data/EXP_PNAS_trees.csv
-Data/EXP_PNAS_tool_sum_ns_100_nt_2000.csv
-Data/EXP_PNAS_tool_sum_ns_100_nt_2000_updated.csv
-Data/EXP_PNAS_tools_ns_100_nt_2000.csv
-Data/EXP_PNAS_run_tools_sum.csv
+.DS_Store
